--- a/calculadora.html
+++ b/calculadora.html
@@ -6,7 +6,6 @@
 <title>Fusion Customs - Relatório</title>
 
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
-<script src="https://kit.fontawesome.com/a2d9b1d7a1.js" crossorigin="anonymous"></script>
 <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700&display=swap" rel="stylesheet">
 
 <style>
@@ -25,13 +24,6 @@ body{
   z-index:1000;
 }
 .logo{font-weight:700}
-.nav-links a{
-  color:#fff;
-  margin-left:18px;
-  text-decoration:none;
-  font-weight:600;
-}
-.nav-links a:hover{color:#cfcfcf}
 .card{
   border-radius:14px;
   box-shadow:0 6px 20px rgba(0,0,0,.15);
@@ -57,25 +49,16 @@ textarea{
 <body>
 
 <header class="topbar">
-<div class="container d-flex justify-content-between align-items-center">
-  <div class="d-flex align-items-center gap-3">
-    <img src="https://imgur.com/UX64xoQ.png" style="height:60px;border-radius:8px">
-    <div class="logo">Fusion Customs</div>
-  </div>
-  <nav class="d-none d-md-flex nav-links align-items-center">
-    <a href="index.html">Início</a>
-    <a href="tabela.html">Preços</a>
-    <a href="shop.html">Loja</a>
-    <a href="relatorio.html">Relatório</a>
-    <a href="funcionarios.html">Funcionários</a>
-  </nav>
+<div class="container d-flex align-items-center gap-3">
+<img src="https://imgur.com/UX64xoQ.png" style="height:60px;border-radius:8px">
+<div class="logo">Fusion Customs</div>
 </div>
 </header>
 
 <div class="container">
 <div class="row g-4">
 
-<!-- TUNAGEM -->
+<!-- ================= TUNAGEM ================= -->
 <div class="col-md-4">
 <div class="card h-100">
 <div class="card-header">TUNAGEM</div>
@@ -87,10 +70,7 @@ textarea{
 <div class="form-check"><input class="form-check-input item" data-nome="Motor Nível 3" data-valor="82000" type="checkbox"> Motor Nível 3</div>
 <div class="form-check"><input class="form-check-input item" data-nome="Motor Nível 4" data-valor="92000" type="checkbox"> Motor Nível 4</div>
 
-<div class="form-check"><input class="form-check-input item" data-nome="Bloco de Motor" data-valor="32000" type="checkbox"> Bloco de Motor</div>
-<div class="form-check"><input class="form-check-input item" data-nome="Som do Motor" data-valor="32000" type="checkbox"> Som do Motor</div>
-
-<hr><b>Freio</b>
+<hr><b>Freios</b>
 <div class="form-check"><input class="form-check-input item" data-nome="Freio Nível 1" data-valor="32000" type="checkbox"> Freio Nível 1</div>
 <div class="form-check"><input class="form-check-input item" data-nome="Freio Nível 2" data-valor="52000" type="checkbox"> Freio Nível 2</div>
 <div class="form-check"><input class="form-check-input item" data-nome="Freio Nível 3" data-valor="112000" type="checkbox"> Freio Nível 3</div>
@@ -108,48 +88,39 @@ textarea{
 
 <hr>
 <div class="form-check"><input class="form-check-input item" data-nome="Turbo" data-valor="50000" type="checkbox"> Turbo</div>
-<div class="form-check"><input class="form-check-input item" data-nome="Full Turning" data-valor="350000" type="checkbox"> Full Turning</div>
+<div class="form-check"><input class="form-check-input item" data-nome="Full Tunagem" data-valor="350000" type="checkbox"> Full Tunagem</div>
 <div class="form-check"><input class="form-check-input item" data-nome="Blindagem" data-valor="500000" type="checkbox"> Blindagem</div>
-<div class="form-check"><input class="form-check-input item" data-nome="Blindagem Pneus" data-valor="1000000" type="checkbox"> Blindagem Pneus</div>
-<div class="form-check"><input class="form-check-input item" data-nome="Blindagem Full" data-valor="1500000" type="checkbox"> Blindagem Full</div>
 
 </div>
 </div>
 </div>
 
-<!-- ESTÉTICA -->
+<!-- ================= ESTÉTICA ================= -->
 <div class="col-md-4">
 <div class="card h-100">
 <div class="card-header">ESTÉTICA</div>
 <div class="card-body">
 
 <b>Carroceria</b>
-<div class="form-check"><input class="form-check-input item" data-nome="Portas" data-valor="32000" type="checkbox"> Portas</div>
-<div class="form-check"><input class="form-check-input item" data-nome="Saia" data-valor="32000" type="checkbox"> Saia</div>
 <div class="form-check"><input class="form-check-input item" data-nome="Para-choque Dianteiro" data-valor="32000" type="checkbox"> Para-choque Dianteiro</div>
 <div class="form-check"><input class="form-check-input item" data-nome="Para-choque Traseiro" data-valor="32000" type="checkbox"> Para-choque Traseiro</div>
 <div class="form-check"><input class="form-check-input item" data-nome="Capô" data-valor="32000" type="checkbox"> Capô</div>
 <div class="form-check"><input class="form-check-input item" data-nome="Escapamento" data-valor="32000" type="checkbox"> Escapamento</div>
-<div class="form-check"><input class="form-check-input item" data-nome="Gaiola de Proteção" data-valor="32000" type="checkbox"> Gaiola de Proteção</div>
 
 <hr><b>Interior</b>
 <div class="form-check"><input class="form-check-input item" data-nome="Bancos" data-valor="32000" type="checkbox"> Bancos</div>
 <div class="form-check"><input class="form-check-input item" data-nome="Painel" data-valor="32000" type="checkbox"> Painel</div>
 <div class="form-check"><input class="form-check-input item" data-nome="Buzina" data-valor="32000" type="checkbox"> Buzina</div>
-<div class="form-check"><input class="form-check-input item" data-nome="Vidro" data-valor="32000" type="checkbox"> Vidro</div>
 
 <hr><b>Rodas</b>
-<div class="form-check"><input class="form-check-input item" data-nome="Rodas Nacionais" data-valor="32000" type="checkbox"> Rodas Nacionais</div>
-<div class="form-check"><input class="form-check-input item" data-nome="Rodas Importadas" data-valor="32000" type="checkbox"> Rodas Importadas</div>
+<div class="form-check"><input class="form-check-input item" data-nome="Rodas" data-valor="32000" type="checkbox"> Rodas</div>
 <div class="form-check"><input class="form-check-input item" data-nome="Cor das Rodas" data-valor="32000" type="checkbox"> Cor das Rodas</div>
-<div class="form-check"><input class="form-check-input item" data-nome="Fumaça do Pneu" data-valor="32000" type="checkbox"> Fumaça</div>
+<div class="form-check"><input class="form-check-input item" data-nome="Fumaça do Pneu" data-valor="32000" type="checkbox"> Fumaça do Pneu</div>
 
 <hr><b>Pintura</b>
 <div class="form-check"><input class="form-check-input item" data-nome="Pintura Primária" data-valor="32000" type="checkbox"> Pintura Primária</div>
 <div class="form-check"><input class="form-check-input item" data-nome="Pintura Secundária" data-valor="32000" type="checkbox"> Pintura Secundária</div>
-<div class="form-check"><input class="form-check-input item" data-nome="Pintura Cromada" data-valor="32000" type="checkbox"> Pintura Cromada</div>
-<div class="form-check"><input class="form-check-input item" data-nome="Pintura Perolado" data-valor="32000" type="checkbox"> Pintura Perolado</div>
-<div class="form-check"><input class="form-check-input item" data-nome="Pintura Decal" data-valor="32000" type="checkbox"> Pintura Decal</div>
+<div class="form-check"><input class="form-check-input item" data-nome="Pintura Perolada" data-valor="32000" type="checkbox"> Pintura Perolada</div>
 
 <hr><b>Luzes</b>
 <div class="form-check"><input class="form-check-input item" data-nome="Xenon" data-valor="32000" type="checkbox"> Xenon</div>
@@ -159,7 +130,7 @@ textarea{
 </div>
 </div>
 
-<!-- RELATÓRIO -->
+<!-- ================= RELATÓRIO ================= -->
 <div class="col-md-4">
 <div class="calc-container h-100">
 
@@ -169,24 +140,25 @@ textarea{
 <label>ID do Cliente</label>
 <input id="id" class="form-control mb-2">
 
-<label>Webhook do Discord</label>
-<input id="webhook" class="form-control mb-2" placeholder="https://discord.com/api/webhooks/...">
-
-<div class="form-check mb-3">
+<div class="form-check mb-2">
 <input type="checkbox" id="parceria" class="form-check-input">
-<label class="form-check-label">Parceria (10%)</label>
+<label class="form-check-label">Parceria PM (10%)</label>
 </div>
 
 <label>Total</label>
 <input id="total" class="form-control mb-2" readonly>
 
 <button class="btn btn-success w-100 mb-2" onclick="gerar()">Gerar Relatório</button>
-<button class="btn btn-primary w-100 mb-2" onclick="enviarWebhook()">
-<i class="fa-brands fa-discord"></i> Enviar via Webhook
-</button>
+<button class="btn btn-primary w-100 mb-2" onclick="enviarDiscord()">Enviar Discord</button>
 <button class="btn btn-danger w-100 mb-2" onclick="limpar()">Limpar</button>
 
 <textarea id="texto" class="form-control mt-2" readonly></textarea>
+
+<div class="mt-4 text-center" style="font-size:14px;color:#555;">
+🤝 <b>Parceria Fusion Customs & Polícia Militar</b><br>
+🚓 Reparo grátis<br>
+🔧 10% de desconto em toda a tunagem
+</div>
 
 </div>
 </div>
@@ -195,6 +167,8 @@ textarea{
 </div>
 
 <script>
+const WEBHOOK_URL = "COLE_AQUI_O_SEU_WEBHOOK";
+
 const itens = document.querySelectorAll(".item");
 const totalInput = document.getElementById("total");
 const parceria = document.getElementById("parceria");
@@ -213,29 +187,30 @@ function gerar(){
   if(!id.value) return alert("ID obrigatório");
   let t = 0;
   let txt = `🛠️ RELATÓRIO FUSION CUSTOMS\n👨‍🔧 Mecânico: ${nome.value || "N/I"}\n🆔 Cliente: ${id.value}\n\n`;
+
   document.querySelectorAll(".item:checked").forEach(i=>{
     t += Number(i.dataset.valor);
     txt += `• ${i.dataset.nome} - R$ ${Number(i.dataset.valor).toLocaleString("pt-BR")}\n`;
   });
-  if(parceria.checked){ txt += `\n🤝 Parceria aplicada (10%)`; t *= 0.9; }
+
+  if(parceria.checked){
+    txt += `\n🤝 Parceria PM aplicada (10%)`;
+    t *= 0.9;
+  }
+
   txt += `\n\n💰 TOTAL: R$ ${t.toLocaleString("pt-BR")}`;
   texto.value = txt;
   totalInput.value = `R$ ${t.toLocaleString("pt-BR")}`;
 }
 
-function enviarWebhook(){
-  if(!webhook.value) return alert("Informe o webhook");
+function enviarDiscord(){
   if(!texto.value) return alert("Gere o relatório primeiro");
 
-  fetch(webhook.value,{
+  fetch(WEBHOOK_URL,{
     method:"POST",
-    headers:{ "Content-Type":"application/json" },
-    body: JSON.stringify({ content: "```" + texto.value + "```" })
-  }).then(()=>{
-    alert("Relatório enviado para o Discord!");
-  }).catch(()=>{
-    alert("Erro ao enviar webhook");
-  });
+    headers:{"Content-Type":"application/json"},
+    body:JSON.stringify({ content: "```" + texto.value + "```" })
+  }).then(()=>alert("Relatório enviado para o Discord ✅"));
 }
 
 function limpar(){
