--- a/funcionarios.html
+++ b/funcionarios.html
@@ -142,9 +142,9 @@ body{
 
     <nav class="d-none d-md-flex align-items-center nav-links">
       <a href="index.html">Início</a>
-      <a href="tabel.html">Preços</a>
+      <a href="tabela.html">Preços</a>
       <a href="funcionarios.html">Funcionários</a>
-      <a href="https://discord.gg/" class="discord-btn">
+      <a href="https://discord.gg/Z72tjMRmUX" class="discord-btn">
         <i class="fa-brands fa-discord"></i> Discord
       </a>
     </nav>
@@ -404,6 +404,7 @@ document.addEventListener("keydown",e=>{
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
+
 
 
 
