--- a/pagamento.html
+++ b/pagamento.html
@@ -15,6 +15,9 @@
   --vermelho:#e10600;
   --dourado:#ffcc00;
   --bg:#f7f9fb;
+  --input-bg:#fff;
+  --input-border:#ddd;
+  --btn-bg-gradient: linear-gradient(135deg,var(--vermelho),var(--dourado));
 }
 
 body{
@@ -73,105 +76,88 @@ body{
   padding:8px 16px;
   border-radius:14px;
   font-weight:700;
-  background:linear-gradient(135deg,var(--vermelho),var(--dourado));
+  background:var(--btn-bg-gradient);
   color:#000;
   text-decoration:none;
 }
 
-/* ===== SUBMENU ===== */
-.menu-dropdown{
-  position:relative;
-  display:inline-block;
-}
-
-.dropdown-content{
-  position:absolute;
-  top:calc(100% + 8px);
-  left:0;
-  background:#000;
-  border-radius:12px;
-  min-width:190px;
-  padding:8px 0;
-  opacity:0;
-  visibility:hidden;
-  transform:translateY(6px);
-  transition:.25s ease;
-  box-shadow:0 12px 30px rgba(0,0,0,.45);
-  z-index:999;
-}
-
-.dropdown-content a{
-  display:block;
-  padding:10px 18px;
-  color:#fff;
-  text-decoration:none;
-  font-weight:500;
-}
-
-.dropdown-content a:hover{
-  background:linear-gradient(90deg,var(--vermelho),var(--dourado));
-  color:#000;
-}
-
-.menu-dropdown:hover .dropdown-content{
-  opacity:1;
-  visibility:visible;
-  transform:translateY(0);
-}
-
-/* ===== CONTEÚDO ===== */
-.container-max{max-width:1200px}
-
-.card-gradient{
+/* ===== FORMULÁRIO ===== */
+.calc-container{
+  max-width:600px;
+  margin:0 auto 40px;
   background:#fff;
+  padding:30px 35px;
   border-radius:16px;
-  margin-top:20px
+  box-shadow:0 10px 30px rgba(0,0,0,0.15);
 }
 
-.card-header-gradient{
-  padding:26px;
-  color:#fff;
+.calc-container h4{
   text-align:center;
-  border-radius:16px 16px 0 0;
+  margin-bottom:25px;
+  background:var(--btn-bg-gradient);
+  -webkit-background-clip:text;
+  -webkit-text-fill-color:transparent;
 }
 
-.service-columns{
-  display:flex;
-  flex-wrap:wrap;
-  gap:20px;
-  padding:20px
+.calc-container label{
+  font-weight:600;
+  margin-top:15px;
+  display:block;
 }
 
-.service-column{
-  flex:1;
-  min-width:320px
-}
-
-.subtitulo{
-  background:#e0e0e0;
-  padding:8px;
-  font-weight:700;
-  text-align:center;
-  border-radius:6px
-}
-
-table{
+.calc-container input[type="text"],
+.calc-container input[type="file"],
+.calc-container textarea{
   width:100%;
-  border-collapse:collapse;
-  margin-top:10px
+  padding:12px 15px;
+  margin-top:6px;
+  border:1px solid var(--input-border);
+  border-radius:10px;
+  background:var(--input-bg);
+  transition:.3s;
 }
 
-th,td{
-  border:1px solid #ddd;
-  padding:10px
+.calc-container input:focus,
+.calc-container textarea:focus{
+  outline:none;
+  border-color:var(--vermelho);
+  box-shadow:0 0 6px rgba(225,6,0,0.35);
 }
 
-th{background:#f1f1f1}
-
-.price-sem{
-  color:#d13b3b;
-  font-weight:700
+textarea{
+  height:180px;
+  margin-top:20px;
+  resize:none;
+  font-family:'Inter',sans-serif;
+  font-size:14px;
+  padding:15px;
 }
+
+/* ===== BOTOES ===== */
+.calc-container button{
+  cursor:pointer;
+  padding:12px 20px;
+  border:none;
+  font-weight:700;
+  border-radius:12px;
+  margin-top:15px;
+  margin-right:10px;
+  transition:.3s;
+  color:#fff;
+  background:var(--btn-bg-gradient);
+}
+
+.calc-container button:hover{
+  transform:translateY(-2px);
+  box-shadow:0 6px 15px rgba(0,0,0,0.2);
+}
+
+/* ===== FOOTER ===== */
+footer{
+  color:#777;
+  margin-top:40px;
+}
+
 </style>
 </head>
 
@@ -186,35 +172,38 @@ th{background:#f1f1f1}
       <div class="logo">Deboxe Customs</div>
     </div>
     
-  <nav class="d-none d-md-flex align-items-center nav-links">
-    <a href="index.html">Início</a>
-    <a href="tabela.html">Preços</a>
-    <a href="funcionarios.html">Funcionarios</a>
-    <a href="https://discord.gg/Z72tjMRmUX" class="discord-btn"><i class="fa-brands fa-discord"></i> Discord</a>
-  </nav>
-</div>
+    <nav class="d-none d-md-flex align-items-center nav-links">
+      <a href="index.html">Início</a>
+      <a href="tabela.html">Preços</a>
+      <a href="funcionarios.html">Funcionarios</a>
+      <a href="https://discord.gg/Z72tjMRmUX" class="discord-btn"><i class="fa-brands fa-discord"></i> Discord</a>
+    </nav>
+  </div>
 </header>
 
+<!-- FORMULÁRIO -->
 <div class="calc-container">
-<h4 class="text-center">📄 RELATÓRIO DE PAGAMENTO RP</h4>
+  <h4>📄 RELATÓRIO DE PAGAMENTO RP</h4>
 
-<label>Nome do Funcionário</label>
-<input id="nome">
+  <label>Nome do Funcionário</label>
+  <input id="nome" type="text">
 
-<label>ID do Funcionário</label>
-<input id="idFunc">
+  <label>ID do Funcionário</label>
+  <input id="idFunc" type="text">
 
-<label>Cargo do Funcionário</label>
-<input id="cargoFunc" placeholder="Digite o cargo do funcionário">
+  <label>Cargo do Funcionário</label>
+  <input id="cargoFunc" type="text" placeholder="Digite o cargo do funcionário">
 
-<label>Imagem do Comprovante</label>
-<input type="file" id="imagem" accept="image/*">
+  <label>Imagem do Comprovante</label>
+  <input type="file" id="imagem" accept="image/*">
 
-<button class="calc-btn" onclick="gerarRelatorio()">Gerar Relatório</button>
-<button class="discord-send" onclick="enviarDiscord()">Enviar no Discord</button>
-<button class="clear-btn" onclick="limpar()">Limpar</button>
+  <div class="d-flex flex-wrap">
+    <button class="calc-btn" onclick="gerarRelatorio()">Gerar Relatório</button>
+    <button class="discord-send" onclick="enviarDiscord()">Enviar no Discord</button>
+    <button class="clear-btn" onclick="limpar()">Limpar</button>
+  </div>
 
-<textarea id="relatorio" readonly></textarea>
+  <textarea id="relatorio" readonly></textarea>
 </div>
 
 <footer class="text-center py-4 text-muted">© <span id="year"></span> 021 CUSTOMS</footer>
@@ -245,9 +234,8 @@ function gerarRelatorio(){
   const dataAtual = `${dia}/${mes}/${ano}`;
   const idMes = `${id}-${mes}`;
 
-  // Relatório RP visual
   let texto = `════════════════════════════════\n`;
-  texto += `🛠️ **Central Race – PAGAMENTO SEMANAL** 🛠️\n`;
+  texto += `🛠️ **Deboxe Customs – PAGAMENTO SEMANAL** 🛠️\n`;
   texto += `════════════════════════════════\n\n`;
   texto += `👤 **Funcionário:** ${nome} (ID: ${idMes})\n`;
   texto += `🏷️ **Cargo:** ${cargo}\n`;
@@ -290,11 +278,4 @@ function limpar(){
 </script>
 
 </body>
-
 </html>
-
-
-
-
-
-
